# SyncPad

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container-image.yml  deploy-production.yml  deploy.yml  measure-production.yml
deploy/: README.md  docker-compose.yml  nginx.txt
docs/: DECISIONS.md  README.md  architecture.md  architecture.mmd  future-releases.md  measurements.md  syncpad-engineering-doc.md
scripts/: setup.ps1  setup.sh  stress.ts  verify.ps1  verify.sh
server/: Cargo.toml  README.md
server/src/: doc.rs  lib.rs  limits.rs  main.rs  protocol.rs  registry.rs  snapshot.rs
server/tests/: api.rs  fuzz_convergence.rs  reaper.rs  snapshot.rs  ws.rs
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: convergence.spec.ts  cursors.spec.ts  docs-demo.spec.ts  share.spec.ts  ui.spec.ts
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/scripts/: check-docs.mjs  gen-assets.mjs  render-architecture.mjs
web/src/: App.tsx  Editor.tsx  Landing.tsx  ShareModal.tsx  api.test.ts  api.ts  connection.test.ts  connection.ts  cursors.ts  index.css  main.tsx  ops.test.ts  ops.ts  otClient.test.ts  otClient.ts  routes.test.ts  routes.ts  share.test.ts  share.ts  stress.test.ts  stressMetrics.ts
