[package]
name = "syncpad-server"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "SyncPad server: real-time collaborative code editing over WebSockets with operational transforms"
repository = "https://github.com/ayenisholah/SyncPad"
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
dashmap = "6"
futures-util = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
